--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
         const IconTag = ({ className }) => (
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" className={className}><path d="M12.586 2.586A2 2 0 0 0 11.172 2H4a2 2 0 0 0-2 2v7.172a2 2 0 0 0 .586 1.414l5 5a2 2 0 0 0 2.828 0l7.172-7.172a2 2 0 0 0 0-2.828l-5-5z" /><path d="M7 7h.01" /></svg>
         );
-        const IconShoppingBag = ({ className }) => (
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" className={className}><path d="M6 2 3 6v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6l-3-4Z" /><path d="M3 6h18" /><path d="M16 10a4 4 0 0 1-8 0" /></svg>
+        const IconShoppingCart = ({ className }) => (
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" className={className}><circle cx="8" cy="21" r="1" /><circle cx="19" cy="21" r="1" /><path d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12" /></svg>
         );
         const IconCrown = ({ className }) => (
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" className={className}><path d="m5 18 1.427-4.573a2.828 2.828 0 0 1 5.347.935c0 .09-.033.473-.033.473a2.828 2.828 0 0 1 5.307-.76 2.828 2.828 0 0 1 5.347.935L22 18H5.002Z" /><path d="m15.589 10.375 1.583-5.25A2.828 2.828 0 0 1 18.5 7.5a2.828 2.828 0 0 1-1.328 1.93" /><path d="m8.589 10.375-1.583-5.25A2.828 2.828 0 0 0 5.5 7.5a2.828 2.828 0 0 0 1.328 1.93" /></svg>
@@ -155,6 +155,14 @@
         db.version(5).stores({
             categories: '++id, &name, taxRate, icon',
             items: '++id, name, categoryId, favorite',
+            prices: '++id, itemId, shop, price, amount, unitPrice, inputType, unitPriceInTax, date, memo',
+            settings: 'key, value'
+        });
+
+        // Version 6: Add shoppingList field to items
+        db.version(6).stores({
+            categories: '++id, &name, taxRate, icon',
+            items: '++id, name, categoryId, favorite, shoppingList',
             prices: '++id, itemId, shop, price, amount, unitPrice, inputType, unitPriceInTax, date, memo',
             settings: 'key, value'
         });
@@ -759,6 +767,12 @@
                 loadItems();
             };
 
+            const handleToggleShoppingList = async (e, item) => {
+                e.stopPropagation();
+                await db.items.update(item.id, { shoppingList: !item.shoppingList });
+                loadItems();
+            };
+
             return (
                 <div className="flex flex-col h-full">
                     {/* Header */}
@@ -812,10 +826,10 @@
                                                 <button onClick={(e) => handleToggleFavorite(e, item)} className={`p-1.5 transition-colors ${item.favorite ? 'text-yellow-400' : 'text-gray-300 hover:text-yellow-400'}`}>
                                                     <IconStar className="w-5 h-5" filled={item.favorite} />
                                                 </button>
-                                                <div className="w-6 h-6 rounded-full bg-main-light flex items-center justify-center text-main">
-                                                    <IconChevronLeft className="rotate-180 w-4 h-4" />
-                                                </div>
-                                                <button onClick={(e) => handleDeleteItem(e, item.id)} className="p-1.5 text-gray-300 hover:text-red-400 transition-colors">
+                                                <button onClick={(e) => handleToggleShoppingList(e, item)} className={`w-8 h-8 rounded-full flex items-center justify-center transition-all active:scale-90 ${item.shoppingList ? 'bg-main text-white shadow-md' : 'bg-gray-100 text-text-light hover:bg-gray-200'}`}>
+                                                    <IconShoppingCart className="w-4 h-4" />
+                                                </button>
+                                                <button onClick={(e) => handleDeleteItem(e, item.id)} className="p-1.5 text-gray-300 hover:text-red-400 transition-colors ml-1">
                                                     <IconTrash className="w-4 h-4" />
                                                 </button>
                                             </div>
@@ -956,8 +970,132 @@
             );
         };
 
+        // --- Screen: Shopping List (Memo) ---
+        const ShoppingList = ({ onBack, onSelectItem, displayMode }) => {
+            const [items, setItems] = useState([]);
+            const [itemPrices, setItemPrices] = useState({});
+            const [categoryMap, setCategoryMap] = useState({});
+
+            const loadShoppingList = async () => {
+                // Load categories
+                const cats = await db.categories.toArray();
+                const catMap = {};
+                cats.forEach(c => catMap[c.id] = c);
+                setCategoryMap(catMap);
+
+                // Load items in shopping list
+                const result = await db.items.where('shoppingList').equals('true').toArray(); // Dexie boolean query depends on index but here we scan or use filter if not indexed properly. Actually boolean index works 1/0. Let's try filter for safety if index not set on V6 perfectly or just filter all items.
+                // Wait, I defined schema with 'shoppingList' but it's not indexed in 'items: ++id, name, categoryId, favorite, shoppingList'.
+                // So I can't use where('shoppingList').equals(...) directly efficiently without index.
+                // But dataset is small, so filter is fine.
+                const allItems = await db.items.toArray();
+                const shoppingItems = allItems.filter(i => i.shoppingList);
+
+                // Fetch best prices
+                const pricesMap = {};
+                for (const item of shoppingItems) {
+                    const latestPrices = await db.prices.where('itemId').equals(item.id).toArray();
+                    if (latestPrices.length > 0) {
+                        const cat = catMap[item.categoryId];
+                        const taxRate = cat ? cat.taxRate : 0.08;
+                        const cheapest = latestPrices.reduce((prev, curr) => {
+                            const prevTax = prev.unitPriceInTax || calculateInclusivePrice(prev.unitPrice, prev.inputType || 'tax_excluded', taxRate);
+                            const currTax = curr.unitPriceInTax || calculateInclusivePrice(curr.unitPrice, curr.inputType || 'tax_excluded', taxRate);
+                            return prevTax < currTax ? prev : curr;
+                        }, latestPrices[0]);
+                        pricesMap[item.id] = cheapest;
+                    }
+                }
+
+                // Sort by Category then Name
+                shoppingItems.sort((a, b) => {
+                    if (a.categoryId !== b.categoryId) return a.categoryId - b.categoryId;
+                    return a.name.localeCompare(b.name, 'ja');
+                });
+
+                setItems(shoppingItems);
+                setItemPrices(pricesMap);
+            };
+
+            useEffect(() => { loadShoppingList(); }, []);
+
+            const handleRemoveFromList = async (e, item) => {
+                e.stopPropagation();
+                await db.items.update(item.id, { shoppingList: false });
+                loadShoppingList();
+            };
+
+            return (
+                <div className="flex flex-col h-full">
+                    {/* Header */}
+                    <div className="sticky top-0 bg-base/95 backdrop-blur-sm z-10 px-4 py-4 border-b border-border/50 flex items-center gap-2">
+                        <button onClick={onBack} className="p-2 -ml-2 rounded-full hover:bg-gray-100 text-text-light">
+                            <IconChevronLeft />
+                        </button>
+                        <h2 className="text-2xl font-bold text-text flex items-center gap-2">
+                            <IconShoppingCart className="w-6 h-6 text-main" />
+                            買い物メモ
+                        </h2>
+                    </div>
+
+                    {/* Content */}
+                    <div className="flex-1 overflow-y-auto px-4 py-6">
+                        {items.length === 0 ? (
+                            <div className="flex flex-col items-center justify-center py-20 text-text-light opacity-50">
+                                <IconShoppingCart className="w-16 h-16 mb-4" />
+                                <p>買い物リストは空です</p>
+                            </div>
+                        ) : (
+                            <div className="grid gap-3">
+                                {items.map(item => {
+                                    const bestPrice = itemPrices[item.id];
+                                    const category = categoryMap[item.categoryId];
+                                    let displayPriceString = null;
+                                    if (bestPrice && category) {
+                                        const inputType = bestPrice.inputType || 'tax_excluded';
+                                        const val = calculateDisplayPrice(bestPrice.price, inputType, category.taxRate, displayMode);
+                                        displayPriceString = formatPrice(val);
+                                    }
+
+                                    return (
+                                        <Card key={item.id} onClick={() => onSelectItem(item)} className="py-3 bg-white border-l-4 border-main">
+                                            <div className="flex justify-between items-center gap-2">
+                                                <div className="flex-1 min-w-0">
+                                                    <div className="flex items-center gap-2 mb-1">
+                                                        <h3 className="font-bold text-stone-700 text-base truncate">{item.name}</h3>
+                                                        {category && (
+                                                            <span className="text-[10px] text-white bg-text-light/50 px-1.5 py-0.5 rounded text-xs">{category.name}</span>
+                                                        )}
+                                                    </div>
+                                                    {bestPrice ? (
+                                                        <div className="flex items-center gap-2">
+                                                            <span className="text-xs text-main font-bold">最安</span>
+                                                            <span className="text-sm font-bold text-main-dark">{displayPriceString}</span>
+                                                            <span className="text-xs text-text-light">({bestPrice.shop})</span>
+                                                        </div>
+                                                    ) : (
+                                                        <span className="text-xs text-text-light">価格未登録</span>
+                                                    )}
+                                                </div>
+                                                <button
+                                                    onClick={(e) => handleRemoveFromList(e, item)}
+                                                    className="p-3 bg-gray-100 text-text-light rounded-full hover:bg-gray-200 active:bg-gray-300 transition-colors"
+                                                    title="リストから削除"
+                                                >
+                                                    <IconCheck className="w-5 h-5" />
+                                                </button>
+                                            </div>
+                                        </Card>
+                                    );
+                                })}
+                            </div>
+                        )}
+                    </div>
+                </div>
+            );
+        };
         // --- Screen: Home (Categories) ---
-        const Home = ({ onSelectCategory, displayMode, onUpdateMode, onSearch }) => {
+        const Home = ({ onSelectCategory, displayMode, onUpdateMode, onSearch, onShopping }) => {
             const [categories, setCategories] = useState([]);
             const [isAddModalOpen, setIsAddModalOpen] = useState(false);
             const [isEditModalOpen, setIsEditModalOpen] = useState(false);
@@ -1083,7 +1221,10 @@
                             </h1>
                             <p className="text-xs text-text-light mt-1 pl-6">お買い物の底値を賢く管理</p>
                         </div>
-                        <div className="flex items-center gap-1">
+                        <div className="flex items-center gap-2">
+                            <button onClick={onShopping} className="p-2 rounded-full bg-white text-main border-2 border-main shadow-sm hover:bg-main-light/10 transition-all relative" title="買い物メモ">
+                                <IconShoppingCart className="w-5 h-5" />
+                            </button>
                             <button onClick={onSearch} className="p-2 rounded-full hover:bg-gray-100 text-text-light">
                                 <IconSearch className="w-6 h-6" />
                             </button>
@@ -1119,6 +1260,8 @@
                                 <span className="text-xs font-bold">追加</span>
                             </button>
                         </div>
+
+
                     </div>
 
                     {/* Add Modal */}
@@ -1260,6 +1403,7 @@
             );
         };
 
+
         // --- App Layout ---
         const App = () => {
             const [isReady, setIsReady] = useState(false);
@@ -1308,10 +1452,15 @@
                 setView('search');
             };
 
+            const goToShopping = () => {
+                setView('shopping');
+            };
+
             const goBack = () => {
-                if (view === 'history') setView('items');
+                if (view === 'history') setView('items'); // Simplified back nav
                 else if (view === 'items') setView('home');
                 else if (view === 'search') setView('home');
+                else if (view === 'shopping') setView('home');
             };
 
             const handleSearchSelect = (item) => {
@@ -1329,6 +1478,7 @@
                                 displayMode={displayMode}
                                 onUpdateMode={handleUpdateMode}
                                 onSearch={goToSearch}
+                                onShopping={goToShopping}
                             />
                         )}
                         {view === 'items' && (
@@ -1349,6 +1499,13 @@
                         )}
                         {view === 'search' && (
                             <SearchScreen
+                                onBack={goBack}
+                                onSelectItem={handleSearchSelect}
+                                displayMode={displayMode}
+                            />
+                        )}
+                        {view === 'shopping' && (
+                            <ShoppingList
                                 onBack={goBack}
                                 onSelectItem={handleSearchSelect}
                                 displayMode={displayMode}
